--- a/templates/certificados.html
+++ b/templates/certificados.html
@@ -10,15 +10,17 @@
                 <p class="text-muted mb-0">Gerencie todos os certificados cadastrados</p>
             </div>
             <div class="col-md-6 text-md-end mt-3 mt-md-0">
-                <a href="{{ url_for('novo_certificado') }}" class="btn btn-success me-2">
-                    <i class="fas fa-plus-circle me-2"></i>Novo Certificado
-                </a>
-                <a href="{{ url_for('exportar_certificados') }}" class="btn btn-primary">
-                    <i class="fas fa-file-excel me-2"></i>Exportar Excel
-                </a>
-                <a href="{{ url_for('xml_upload') }}" class="btn btn-success">
-                    <i class="fas fa-file-upload me-2"></i>Enviar XML
-                </a>
+                <div class="d-flex justify-content-end gap-2">
+                    <a href="{{ url_for('novo_certificado') }}" class="btn btn-success">
+                        <i class="fas fa-plus-circle me-2"></i>Novo Certificado
+                    </a>
+                    <a href="{{ url_for('exportar_certificados') }}" class="btn btn-primary">
+                        <i class="fas fa-file-excel me-2"></i>Exportar Excel
+                    </a>
+                    <a href="{{ url_for('xml_upload') }}" class="btn btn-info text-white">
+                        <i class="fas fa-file-upload me-2"></i>Enviar XML
+                    </a>
+                </div>
             </div>
         </div>
     </div>
